# src/routes/social.ts
@@ -1,39 +1,32 @@
 import { Router } from "express";
-import { auth, isExistUserId, isSameUserId } from "../middlewares/auth";
+import { auth, isExistSocial, isSameBody } from "../middlewares/auth";
 import {
   deleteSocial,
   getSocialById,
   getSocials,
   postSocial,
+  restoreSocial,
   updateSocial,
   updateSocialOrder,
 } from "../controllers/social";
-import { config } from "dotenv";
 import { validate } from "../middlewares/validate";
 import { orderSchema, socialSchema } from "../utils/joi";
-
-config();
 
 const router = Router();
 
 router.get("/", auth, getSocials);
 router.get("/:id", auth, getSocialById);
 router.post("/", auth, validate(socialSchema), postSocial);
-router.patch("/:id", auth, isExistUserId("social"), isSameUserId, updateSocial);
+router.patch("/:id", auth, isExistSocial("social"), isSameBody, updateSocial);
 router.patch(
   "/:id/reorder",
   auth,
-  isExistUserId("social"),
-  isSameUserId,
+  isExistSocial("social"),
+  isSameBody,
   validate(orderSchema),
   updateSocialOrder
 );
-router.delete(
-  "/:id",
-  auth,
-  isExistUserId("social"),
-  isSameUserId,
-  deleteSocial
-);
+router.put("/:id", auth, isExistSocial("social"), isSameBody, restoreSocial);
+router.delete("/:id", auth, isExistSocial("social"), isSameBody, deleteSocial);
 
 export default router;
